// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select render no child without errors 1`] = `
<Select>
  <Popper
    borderType="underline"
    clickToClose={true}
    defaultOpen={false}
    defaultVisible={false}
    filterOption={true}
    mode="single"
    onVisibleChange={[Function]}
    optionFilterProp="label"
    optionLabelProp="children"
    placement="bottomLeft"
    popperStyle={
      Object {
        "maxWidth": 600,
        "minWidth": 0,
        "width": "auto",
        "zIndex": 1050,
      }
    }
    prefixCls="kd-select-dropdown-panel null"
    showArrow={true}
    size="middle"
    tip={
      <React.Fragment>
        <div
          className="kd-select-dropdown kd-select-dropdown-no-data"
          style={Object {}}
        >
          <div
            className="kd-select-dropdown-empty"
          >
            暂无数据
          </div>
          <div />
        </div>
      </React.Fragment>
    }
    triggerScroll={true}
    visible={false}
  >
    <div
      className="kd-popper-reference kd-select"
    >
      <span
        className="kd-select-selector"
        onFocus={[Function]}
        onKeyDown={[Function]}
        tabIndex={0}
      >
        <div
          className="kd-select-underline kd-select-size-middle kd-select-wrapper kd-select-single kd-select-single-isnotMobile"
        >
          <span
            className="kd-select-selection-search"
          >
            <input
              className="kd-select-selection-search-input"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              readOnly={true}
              value=""
            />
          </span>
          <span
            className="kd-select-placeholder"
          >
            请输入需要搜索的内容
          </span>
          <span
            className="kd-select-suffix"
          >
            <span
              className="kd-select-icon-arrow kd-select-icon-arrow-down"
            >
              <Icon
                type="arrow-down"
              >
                <i
                  className="kdicon kdicon-arrow-down"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  style={Object {}}
                />
              </Icon>
            </span>
          </span>
        </div>
      </span>
    </div>
  </Popper>
</Select>
`;

exports[`Select renders correctly 1`] = `
<div
  class="kd-popper-reference kd-select"
>
  <span
    class="kd-select-selector"
    tabindex="0"
  >
    <div
      class="kd-select-underline kd-select-size-middle kd-select-wrapper kd-select-multiple"
      data-ignore-auto-rtl="false"
    >
      <span
        class="kd-select-selection-search"
        style="width:4px"
      >
        <input
          class="kd-select-selection-search-input"
          value=""
        />
        <span
          class="kd-select-selection-search-mirror"
        >
           
        </span>
      </span>
      <span
        class="kd-select-placeholder"
      >
        请输入需要搜索的内容
      </span>
      <span
        class="kd-select-suffix"
      >
        <span
          class="kd-select-icon-arrow kd-select-icon-arrow-down"
        >
          <i
            class="kdicon kdicon-arrow-down"
          />
        </span>
      </span>
    </div>
  </span>
</div>
`;

exports[`Select renders correctly 2`] = `
<div
  class="kd-popper-reference kd-select"
>
  <span
    class="kd-select-selector"
    tabindex="0"
  >
    <div
      class="kd-select-underline kd-select-size-middle kd-select-wrapper kd-select-single kd-select-single-isnotMobile"
    >
      <span
        class="kd-select-selection-search"
      >
        <input
          class="kd-select-selection-search-input"
          readonly=""
          value=""
        />
      </span>
      <span
        class="kd-select-placeholder"
      >
        请输入需要搜索的内容
      </span>
      <span
        class="kd-select-suffix"
      >
        <span
          class="kd-select-icon-arrow kd-select-icon-arrow-down"
        >
          <i
            class="kdicon kdicon-arrow-down"
          />
        </span>
      </span>
    </div>
  </span>
</div>
`;

exports[`Select renders correctly 3`] = `
<div
  class="kd-popper-reference kd-select"
>
  <span
    class="kd-select-selector"
    tabindex="0"
  >
    <div
      class="kd-select-borderless kd-select-size-middle kd-select-wrapper kd-select-single kd-select-single-isnotMobile"
    >
      <span
        class="kd-select-selection-search"
      >
        <input
          class="kd-select-selection-search-input"
          readonly=""
          value=""
        />
      </span>
      <span
        class="kd-select-placeholder"
      >
        请输入需要搜索的内容
      </span>
      <span
        class="kd-select-suffix"
      >
        <span
          class="kd-select-icon-arrow kd-select-icon-arrow-down"
        >
          <i
            class="kdicon kdicon-arrow-down"
          />
        </span>
      </span>
    </div>
  </span>
</div>
`;

exports[`Select renders correctly 4`] = `
<div
  class="kd-popper-reference kd-select"
>
  <span
    class="kd-select-selector"
    tabindex="0"
  >
    <div
      class="kd-select-underline kd-select-size-middle kd-select-wrapper kd-select-single kd-select-single-isnotMobile"
    >
      <span
        class="kd-select-selection-search"
      >
        <input
          class="kd-select-selection-search-input"
          readonly=""
          value=""
        />
      </span>
      <span
        class="kd-select-placeholder"
      >
        请输入需要搜索的内容
      </span>
      <span
        class="kd-select-suffix"
      >
        <span
          class="kd-select-icon-arrow kd-select-icon-arrow-down"
        >
          <i
            class="kdicon kdicon-arrow-down"
          />
        </span>
      </span>
    </div>
  </span>
</div>
`;

exports[`Select renders correctly 5`] = `
<div
  class="kd-popper-reference kd-select"
>
  <span
    class="kd-select-selector"
    tabindex="0"
  >
    <div
      class="kd-select-bordered kd-select-size-middle kd-select-wrapper kd-select-single kd-select-single-isnotMobile"
    >
      <span
        class="kd-select-selection-search"
      >
        <input
          class="kd-select-selection-search-input"
          readonly=""
          value=""
        />
      </span>
      <span
        class="kd-select-placeholder"
      >
        请输入需要搜索的内容
      </span>
      <span
        class="kd-select-suffix"
      >
        <span
          class="kd-select-icon-arrow kd-select-icon-arrow-down"
        >
          <i
            class="kdicon kdicon-arrow-down"
          />
        </span>
      </span>
    </div>
  </span>
</div>
`;

exports[`Select renders correctly 6`] = `
<div
  class="kd-popper-reference kd-select"
>
  <span
    class="kd-select-selector"
    tabindex="0"
  >
    <div
      class="kd-select-underline kd-select-size-large kd-select-wrapper kd-select-single kd-select-single-isnotMobile"
    >
      <span
        class="kd-select-selection-search"
      >
        <input
          class="kd-select-selection-search-input"
          readonly=""
          value=""
        />
      </span>
      <span
        class="kd-select-placeholder"
      >
        请输入需要搜索的内容
      </span>
      <span
        class="kd-select-suffix"
      >
        <span
          class="kd-select-icon-arrow kd-select-icon-arrow-down"
        >
          <i
            class="kdicon kdicon-arrow-down"
          />
        </span>
      </span>
    </div>
  </span>
</div>
`;

exports[`Select renders correctly 7`] = `
<div
  class="kd-popper-reference kd-select"
>
  <span
    class="kd-select-selector"
    tabindex="0"
  >
    <div
      class="kd-select-underline kd-select-size-middle kd-select-wrapper kd-select-single kd-select-single-isnotMobile"
    >
      <span
        class="kd-select-selection-search"
      >
        <input
          class="kd-select-selection-search-input"
          readonly=""
          value=""
        />
      </span>
      <span
        class="kd-select-placeholder"
      >
        请输入需要搜索的内容
      </span>
      <span
        class="kd-select-suffix"
      >
        <span
          class="kd-select-icon-arrow kd-select-icon-arrow-down"
        >
          <i
            class="kdicon kdicon-arrow-down"
          />
        </span>
      </span>
    </div>
  </span>
</div>
`;

exports[`Select renders correctly 8`] = `
<div
  class="kd-popper-reference kd-select"
>
  <span
    class="kd-select-selector"
    tabindex="0"
  >
    <div
      class="kd-select-underline kd-select-size-small kd-select-wrapper kd-select-single kd-select-single-isnotMobile"
    >
      <span
        class="kd-select-selection-search"
      >
        <input
          class="kd-select-selection-search-input"
          readonly=""
          value=""
        />
      </span>
      <span
        class="kd-select-placeholder"
      >
        请输入需要搜索的内容
      </span>
      <span
        class="kd-select-suffix"
      >
        <span
          class="kd-select-icon-arrow kd-select-icon-arrow-down"
        >
          <i
            class="kdicon kdicon-arrow-down"
          />
        </span>
      </span>
    </div>
  </span>
</div>
`;
